--- a/modal.html
+++ b/modal.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/basicModal/3.3.9/basicModal.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css">
 </head>
-
 <body>
     <div id="app">
-        <button m-on:click="popup">Popup</button>
+        <popup></popup>
     </div>
-
     <script src="https://unpkg.com/moonjs"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/basicModal/3.3.9/basicModal.min.js" charset="utf-8"></script>
     <script>
+        //modal
         var address = 'https://www.maybelline.com/~/media/mny/us/eye-makeup/eye-shadow/the-rock-nudes-palette/modules/featuredproductwide/maybelline-eyeshadow-rocknudes-beauty-look-16x9.jpg?h=900&w=1600&la=en-US&hash=ABE362F5005CB26626B8611FC80B29DCD1419546'
         var bodyText = '<figure><img src="' + address + '" /><figcaption><blockquote><p><em>Yeah!! Milligram is amazing.</em></p></blockquote><p><em>Yeah!! Milligram is amazing.</em></p></figcaption></figure>'
         var popup = {
@@ -28,19 +26,19 @@
                 }
             }
         };
-
-        const app = new Moon({
-            el: "#app",
-            data: {
-                msg: "Hello Moon!"
-            },
+        //componet
+        Moon.component("popup", {
+            template: `<div><button m-on:click="popup">Popup</button></div>`,
             methods: {
                 popup: function() {
                     basicModal.show(popup)
                 }
             }
         });
+        //app
+        const app = new Moon({
+            el: "#app"
+        });
     </script>
 </body>
-
 </html>
