--- a/modal.html
+++ b/modal.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/basicModal/3.3.9/basicModal.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css">
 </head>
+
 <body>
     <div id="app">
         <popup></popup>
@@ -13,24 +14,21 @@
     <script src="https://unpkg.com/moonjs"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/basicModal/3.3.9/basicModal.min.js" charset="utf-8"></script>
     <script>
-        //modal
-        var address = 'https://www.maybelline.com/~/media/mny/us/eye-makeup/eye-shadow/the-rock-nudes-palette/modules/featuredproductwide/maybelline-eyeshadow-rocknudes-beauty-look-16x9.jpg?h=900&w=1600&la=en-US&hash=ABE362F5005CB26626B8611FC80B29DCD1419546'
-        var bodyText = '<figure><img src="' + address + '" /><figcaption><blockquote><p><em>Yeah!! Milligram is amazing.</em></p></blockquote><p><em>Yeah!! Milligram is amazing.</em></p></figcaption></figure>'
-        var popup = {
-            body: bodyText,
-            buttons: {
-                cancel: {
-                    title: 'Dismiss',
-                    class: basicModal.THEME.xclose,
-                    fn: basicModal.close
-                }
-            }
-        };
         //componet
         Moon.component("popup", {
             template: `<div><button m-on:click="popup">Popup</button></div>`,
             methods: {
                 popup: function() {
+                    var popup = {
+                        body: '<figure><img src="https://www.maybelline.com/~/media/mny/us/eye-makeup/eye-shadow/the-rock-nudes-palette/modules/featuredproductwide/maybelline-eyeshadow-rocknudes-beauty-look-16x9.jpg?h=900&w=1600&la=en-US&hash=ABE362F5005CB26626B8611FC80B29DCD1419546" /><figcaption><blockquote><p><em>Yeah!! Milligram is amazing.</em></p></blockquote><p><em>Yeah!! Milligram is amazing.</em></p></figcaption></figure>',
+                        buttons: {
+                            cancel: {
+                                title: 'Dismiss',
+                                class: basicModal.THEME.xclose,
+                                fn: basicModal.close
+                            }
+                        }
+                    };
                     basicModal.show(popup)
                 }
             }
