--- a/modal.html
+++ b/modal.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <div id="app">
-        <popup></popup>
-    </div>
+    <div id="app"></div>
 
     <script src="./js/vendor.js"></script>
     <script src="./js/main.js" charset="utf-8"></script>
