--- a/modal.html
+++ b/modal.html
@@ -11,7 +11,7 @@
 <body>
     <div id="app"></div>
 <!-- Vendor package from jsdeliver
-<script src="https://cdn.jsdelivr.net/combine/npm/axios@0.17.1/dist/axios.min.js,npm/moonjs@0.11.0,npm/moon-router@0.1.3,npm/monx@0.1.1,npm/basicmodal@3.3.9,npm/siema@1.4.6,npm/macy@2.3.0,npm/lodash.debounce@4.0.8/index.min.js,npm/lodash.throttle@4.1.1/index.min.js,npm/lazysizes@4.0.1,npm/lazysizes@4.0.1/plugins/video-embed/ls.video-embed.min.js,npm/lazysizes@4.0.1/plugins/bgset/ls.bgset.min.js" charset="utf-8"></script>
+<script src="https://cdn.jsdelivr.net/combine/npm/axios@0.17.1/dist/axios.min.js,npm/moonjs@0.11.0,npm/moon-router@0.1.3,npm/monx@0.1.1,npm/lazysizes@4.0.1/plugins/bgset/ls.bgset.min.js,npm/lazysizes@4.0.1/plugins/video-embed/ls.video-embed.min.js,npm/lazysizes@4.0.1,npm/basicmodal@3.3.9,npm/siema@1.4.6,npm/macy@2.3.0,npm/slideout@1.0.1/dist/slideout.min.js,npm/lodash.debounce@4.0.8/index.min.js,npm/lodash.throttle@4.1.1/index.min.js" charset="utf-8"></script>
 -->
     <script src="./js/vendor.js"></script>
     <script src="./js/main.js" charset="utf-8"></script>
